// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search with 0 results 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12"
    >
      <h2>
        Search
        <button
          className="pull-right btn btn-default"
          disabled={false}
          onClick={undefined}
          type="button"
        >
          Get latest photos
        </button>
      </h2>
    </div>
  </div>
  <div
    className="row"
  />
</div>
`;

exports[`Search with 1 result 1`] = `
.c0 {
  padding-left: 0;
  padding-right: 0;
}

<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12"
    >
      <h2>
        Search
        <button
          className="pull-right btn btn-default"
          disabled={false}
          onClick={undefined}
          type="button"
        >
          Get latest photos
        </button>
      </h2>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="c0 col-md-1 col-sm-2 col-xs-3"
    >
      <img
        alt=""
        className="img-responsive"
        data-id="image_guid"
        onClick={undefined}
        src="myImg-thumb.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`Search with multiple results 1`] = `
.c0 {
  padding-left: 0;
  padding-right: 0;
}

<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12"
    >
      <h2>
        Search
        <button
          className="pull-right btn btn-default"
          disabled={false}
          onClick={undefined}
          type="button"
        >
          Get latest photos
        </button>
      </h2>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="c0 col-md-1 col-sm-2 col-xs-3"
    >
      <img
        alt=""
        className="img-responsive"
        data-id="image_guid"
        onClick={undefined}
        src="myImg-thumb.jpg"
      />
    </div>
    <div
      className="c0 col-md-1 col-sm-2 col-xs-3"
    >
      <img
        alt=""
        className="img-responsive"
        data-id="image_2_guid"
        onClick={undefined}
        src="myImg2-thumb.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`Search with no result array 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-xs-12"
    >
      <h2>
        Search
        <button
          className="pull-right btn btn-default"
          disabled={false}
          onClick={undefined}
          type="button"
        >
          Get latest photos
        </button>
      </h2>
    </div>
  </div>
  <img
    alt="searching"
    src="loader.svg"
  />
</div>
`;
